added 2 endpoints on the API for sending a player a message and getting the username of a player from their uuid. Moved Proxy controller into plugin package to prevent circular imports.
