# api/src/main/java/org/btuk/proxy/api/impl/PlayerApiImpl.java
@@ -1,8 +1,12 @@
 package org.btuk.proxy.api.impl;
 
 import jakarta.ws.rs.core.Response;
+import net.bteuk.network.lib.dto.DirectMessage;
+import net.bteuk.network.lib.utils.ChatUtils;
 import org.btuk.proxy.api.PlayerApi;
+import org.btuk.proxy.api.model.Message;
 import org.btuk.proxy.api.model.Player;
+import org.btuk.proxy.core.chat.ChatManager;
 import org.btuk.proxy.database.dto.PlayerDTO;
 import org.btuk.proxy.database.sql.GlobalSQL;
 
@@ -10,12 +14,16 @@ import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import static net.bteuk.network.lib.enums.ChatChannels.GLOBAL;
+import static org.btuk.proxy.core.utils.Constants.SERVER_SENDER;
+
 public class PlayerApiImpl implements PlayerApi {
 
     private final GlobalSQL globalSQL;
+    private final ChatManager chatManager;
 
-    public PlayerApiImpl(GlobalSQL globalSQL) {
-        this.globalSQL = globalSQL;
+    public PlayerApiImpl(GlobalSQL globalSQL, ChatManager chatManager) {
+        this.globalSQL = globalSQL;this.chatManager = chatManager;
     }
 
     @Override
@@ -39,5 +47,32 @@ public class PlayerApiImpl implements PlayerApi {
             return Response.status(Response.Status.NOT_FOUND).build();
         }
         return Response.ok(UUID.fromString(uuid)).build();
+    }
+
+    @Override
+    public Response getPlayerUsername(String uuid) {
+        String username = globalSQL.getPlayerUsernameByUuid(uuid);
+        if (uuid == null) {
+            return Response.status(Response.Status.NOT_FOUND).build();
+        }
+        return Response.ok(username).build();
+    }
+
+    @Override
+    public Response sendPlayerMessage(String playerID, Message message){
+
+        try {
+            String messagePlainText = message.getMessage();
+            DirectMessage m = new DirectMessage(GLOBAL.getChannelName(), playerID.toString(), SERVER_SENDER, ChatUtils.success(messagePlainText), true);
+            chatManager.sendDirectMessage(m);
+            return Response.status(Response.Status.CREATED).build();
+        }catch (Exception e)
+        {
+            return Response.status(Response.Status.INTERNAL_SERVER_ERROR)
+                    .entity("Failed to deliver message to player.")
+                    .build();
+        }
+
+
     }
 }
